[ADD]linear regression

--- a/test/data/data_gen.ipynb
+++ b/test/data/data_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "id": "e3fa77e0",
    "metadata": {},
    "outputs": [],
@@ -19,17 +19,20 @@
    "outputs": [],
    "source": [
     "x = np.random.randn(1000000).round(6)\n",
-    "np.savetxt(\"./x_data.txt\", x, fmt=\"%.6f\")"
+    "np.savetxt(\"./x_data.txt\", x, fmt=\"%.6f\")\n",
+    "y = np.random.randn(1000000).round(6)\n",
+    "np.savetxt(\"./y_data.txt\", y, fmt=\"%.6f\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "id": "392d9b6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.loadtxt(\"./x_data.txt\")"
+    "x = np.loadtxt(\"./x_data.txt\")\n",
+    "y = np.loadtxt(\"./y_data.txt\")"
    ]
   },
   {
@@ -157,184 +160,6 @@
     "m, se = np.mean(x), scipy.stats.sem(x)\n",
     "h = se *scipy.stats.t.ppf((1 + confidence) / 2, n - 1)\n",
     "print(m - h, m + h)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "fd3504bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t= np.array([0.43424])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "60e95d5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=(x[0] - t)*(x[0] - t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "b7072ae1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.31556688, 0.77533543])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(x[0] - t)*(x[0] - t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "309f9dfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b=(x[1] - t)*(x[1] - t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "f77f6be4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.05284677850698685"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(a+b)/2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5ffb3811",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.31556688, 0.77533543])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d7512232",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5454511550000001"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m = np.mean(x)\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "01b639ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.05284677989227564"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.var(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "780a4283",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.10569355978455128"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((x[0] - m)**2 + (x[1] - m)**2) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "76a6e101",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.22988427500000003"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.std(x)"
    ]
   },
   {
